--- a/style.css
+++ b/style.css
@@ -17,6 +17,14 @@ form {
     text-align: center;
 }
 
+.inner {
+    position: relative;
+    background: #cdc7ea;
+    z-index: -1;
+    width: 50%;
+    margin: auto;
+}
+
 #searchBtn {
     cursor: pointer;
     background-color: rgba(255,
@@ -72,7 +80,7 @@ ul {
 
 
 body {
-    background: #cdc7ea;
+
     margin: 0;
 }
 
