--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ form {
     position: relative;
     background: #cdc7ea;
     z-index: -1;
-    width: 50%;
+    width: 350px;
     margin: auto;
 }
 
