--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ form {
 }
 
 
+
 #searchBtn {
     cursor: pointer;
     background-color: rgba(255,
@@ -73,7 +74,7 @@ ul {
 
 
 body {
-
+    background: #cdc7ea;
     margin: 0;
 }
 
